Message no longer uses a scrollbar.

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -54,21 +54,16 @@ h1 {
 }
 
 #message {
-  stretch(top: auto)
-  color #fff
-  background rgba(0, 0, 0, .7)
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  height: 100px;
+  stretch(top: 100%, bottom: auto)
+  color #333
+  background #ddd
   padding: 14px;
-  overflow-y: auto;
 }
 
 
 #continue {
   float right
-  color: #aaa;
+  color: #888;
   font-size: 8px;
 }
 
